# fastapi_semester_info

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_main.http
app/: main.py  schemas.py  semester.py
